wrote css for characters website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>JESUS CHRIST</title>
 	<link rel="icon" href="img/jesus-avatar.jpeg">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -16,7 +18,7 @@
 		<h2>ABOUT JESUS</h2>
 		<p>Jesus Christ, born 0BC, son of Mary and Joseph (also, God). Part of the Holy Trinity, a gang comprising Jesus, his Father, God, and a friend, nicknamed, The Holy Spirit</p>
 		<img src="img/jesus-big.jpg">
-		<p>Not His Best Bit!</p>	
+		<p class="caption">Not His Best Bit!</p>	
 
 		<!-- Best bits -->
 		<h2>Jesus's Best bits!</h2>
